# OptiTrade-Engine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  details.md  docker-compose.yml  optitrade_hello.sh  upcoming_version.md
.github/workflows/: build.yml
apps/: optitrade_afpacket_benchmark_generator.cpp  optitrade_afpacket_generator.cpp  optitrade_dpdk_afpacket_engine.cpp  optitrade_dpdk_afpacket_latency.cpp  optitrade_dpdk_latency_benchmark.cpp  optitrade_dpdk_regime_benchmark.cpp  optitrade_dpdk_ring_test.cpp  optitrade_dpdk_scenarios.cpp  optitrade_hello.cpp
docs/level3/: FINAL_RESULTS.md  LATENCY_BENCHMARK.md  REGIME_BENCHMARK.md  WIRE_PROTOCOL.md
include/optitrade/book/: fixed_l2_book.hpp
include/optitrade/common/: sequence_tracker.hpp  types.hpp
include/optitrade/dpdk/: dpdk_config.hpp  dpdk_latency_recorder.hpp  engine_wire_adapter.hpp  latency_virtual_link.hpp  virtual_link.hpp
include/optitrade/engine/: trading_engine.hpp
include/optitrade/order/: order_request.hpp  pending_order_tracker.hpp  preallocated_outbox.hpp
include/optitrade/risk/: risk_guard.hpp
include/optitrade/strategy/: imbalance_strategy.hpp  momentum.hpp  strategy_types.hpp  vwap_imbalance.hpp
include/optitrade/wire/: endian.hpp  ethernet_frame.hpp  market_data_packet.hpp  order_packet.hpp  wire_constants.hpp  wire_header.hpp
results/level3/: afpacket_engine_fixed.txt  afpacket_generator_fixed.txt  afpacket_latency_cpu0.txt  afpacket_latency_cpu2.txt  generator_cpu2.txt  latency_cpu0.txt  latency_cpu2.txt  regime_cpu0.txt  regime_cpu2.txt
scripts/: docker_run.sh
scripts/deploy/: optitrade.env  optitrade.service
scripts/level3/: dpdk_status.sh  phase9_hardware_readiness.sh  remove_veth_afpacket.sh  setup_veth_afpacket.sh
tests/: test_cancel_replace.cpp  test_engine_scenarios.cpp  test_engine_wire_adapter.cpp  test_ethernet_market_frame.cpp  test_ethernet_order_frame.cpp  test_wire_invalid_packet.cpp  test_wire_market_data.cpp  test_wire_order.cpp
tools/: plot_latency.py
